selfhost/test/parser/enumdecl_error_empty_container_variant.out
Error at %FILE_NAME%:1:22
Unexpected token ')', expected 'identifier':
  |  enum Foo { Container() }
                          ^